--- a/templates/news.html
+++ b/templates/news.html
@@ -24,7 +24,7 @@
     </section>
 
     <footer class="bg-gray-800 text-white text-center py-6 mt-12">
-        <p class="text-sm">&copy; 2025 LegalTalk. All rights reserved.</p>
+        <p class="text-sm">&copy; 2025 Law Lens. All rights reserved.</p>
     </footer>
 </body>
 </html>
